tests/sksl/errors/Ossfuzz26759.glsl

void main() {
    int i;
    i-- - 0 * ivec3(i);
}
